# legislative-analytics

./: .gitignore  ReadMe.md  pyproject.toml  run.sh
src/: main.py
src/legislative_analytics/: __init__.py
src/legislative_analytics/application/: __init__.py  main.py
src/legislative_analytics/domain/: __init__.py  entities.py
src/legislative_analytics/repositories/: __init__.py  csv_repositories.py  interfaces.py  validating_vote_results.py
src/legislative_analytics/services/: __init__.py  analytics_service.py
tests/: conftest.py
tests/edge/: test_application_io.py  test_edge_cases.py
tests/integration/: test_csv_repositories.py
tests/unit/: test_analytics_service.py  test_validating_vote_results_repository.py
